code clean up and minor improvements
git-svn-id: https://svn.apache.org/repos/asf/chemistry/opencmis/trunk@1606497 13f79535-47bb-0310-9956-ffa450edef68